# Mafia

./: CMakeLists.txt  conanfile.txt
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
common/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: game.h  game_state.h  group.h  player.h  server.h
server/src/: game.cpp  game_state.cpp  group.cpp  main.cpp  player.cpp  server.cpp
unitTest/: test_main.cpp
unitTest/clientTest/: clientTest.h
unitTest/serverTest/: serverTest.h
unitTest/socketTest/: socketTest.h
utils/: CMakeLists.txt
