CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(Mafia)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(utils)

SET(CLIENT_INCLUDE client/include)
SET(SERVER_INCLUDE server/include)
SET(COMMON_INCLUDE common/include)
SET(UTILS_INCLUDE utils/include)

#GOOGLE TEST
FILE(GLOB TEST_SOURCE	 "unitTest/test_main.cpp")
FILE(GLOB SERVER_TEST_CASE "unitTest/serverTest/*.h")
FILE(GLOB CLIENT_TEST_CASE "unitTest/clientTest/*.h")
FILE(GLOB SOCKET_TEST_CASE "unitTest/socketTest/*.h")

SOURCE_GROUP(TestServer FILES ${SERVER_TEST_CASE})
SOURCE_GROUP(TestClient FILES ${CLIENT_TEST_CASE})
SOURCE_GROUP(TestSocket FILES ${SOCKET_TEST_CASE})

SET(TEST_EXE_NAME "TEST_MAIN${EXE_NAME}")

INCLUDE_DIRECTORIES(${CLIENT_INCLUDE} ${SERVER_INCLUDE} ${COMMON_INCLUDE} ${UTILS_INCLUDE} ${CONAN_INCLUDE_DIRS_GTEST} "unitTest")
ADD_EXECUTABLE(${TEST_EXE_NAME}  ${TEST_SOURCE}  ${SERVER_TEST_CASE}  ${CLIENT_TEST_CASE} ${SOCKET_TEST_CASE})
ADD_LIBRARY(${TEST_EXE_NAME} ${CONAN_LIBS_GTEST})
TARGET_LINK_LIBRARIES(${TEST_EXE_NAME} ${CONAN_LIBS_GTEST})
