CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(MafiaClient)

IF(WIN32)
    SET(PROG_EXE_NAME ${PROJECT_NAME})
    SET(PROG_LIB_NAME lib${PROJECT_NAME})
ELSE(WIN32)
    SET(PROG_EXE_NAME ${PROJECT_NAME}_exe)
    SET(PROG_LIB_NAME ${PROJECT_NAME})
ENDIF(WIN32)

SET(BUILD_DIR ${CMAKE_SOURCE_DIR}/build)
SET(BIN_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(LIB_DIR ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

LIST(APPEND PROJECT_INCLUDE_DIRS ${INCLUDE_DIR})
LIST(APPEND PROJECT_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/utils/include)
LIST(APPEND PROJECT_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/common/include)

IF(WIN32)
    SET(LIB_UTILS libUtils)
    SET(LIB_COMMON libCommon)
ELSE(WIN32)
    SET(LIB_UTILS Utils)
    SET(LIB_COMMON Common)
ENDIF(WIN32)

LIST(APPEND PROJECT_LIBS ${PROG_LIB_NAME})
LIST(APPEND PROJECT_LIBS ${CONAN_LIBS})
LIST(APPEND PROJECT_LIBS ${LIB_UTILS})
LIST(APPEND PROJECT_LIBS ${LIB_COMMON})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})

SET(MAIN_CPP_FILE ${SRC_DIR}/main.cpp)

AUX_SOURCE_DIRECTORY(${SRC_DIR} SRC_FILES)
LIST(REMOVE_ITEM SRC_FILES ${MAIN_CPP_FILE})

INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIRS})

FILE(GLOB HEADER_FILES "${INCLUDE_DIR}/*.h")
ADD_LIBRARY(${PROG_LIB_NAME} STATIC ${SRC_FILES} ${HEADER_FILES})

LINK_DIRECTORIES(${LIB_DIR})

ADD_EXECUTABLE(${PROG_EXE_NAME} ${MAIN_CPP_FILE})

TARGET_LINK_LIBRARIES(${PROG_EXE_NAME} ${PROJECT_LIBS})

if(WIN32)
    ADD_DEFINITIONS(-DWINDOWS=ON)
ENDIF(WIN32)
    