CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(Common)

IF(WIN32)
    SET(PROG_LIB_NAME lib${PROJECT_NAME})
ELSE(WIN32)
    SET(PROG_LIB_NAME ${PROJECT_NAME})
ENDIF(WIN32)

SET(BUILD_DIR ${CMAKE_SOURCE_DIR}/build)
SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
SET(LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})

AUX_SOURCE_DIRECTORY(${SRC_DIR} SRC_FILES)

INCLUDE_DIRECTORIES(${INCLUDE_DIR})

FILE(GLOB HEADER_FILES "${INCLUDE_DIR}/*.h")
ADD_LIBRARY(${PROG_LIB_NAME} STATIC ${SRC_FILES} ${HEADER_FILES})

LINK_DIRECTORIES(${LIB_DIR})

if(WIN32)
    ADD_DEFINITIONS(-DWINDOWS=ON)
ENDIF(WIN32)
    